# midi-time-machine

./: .clang-format  .gitignore  AudioPluginHost  BUILD.md  CMakeLists.txt  DemoRunner  Projucer  README.md  TODO.md  plugin-host.filtergraph
.github/workflows/: build.yml
midi-time-machine/: CMakeLists.txt  TODO.md  midi-time-machine.jucer
midi-time-machine/Builds/LinuxMakefile/: Containerfile  Makefile  build_release.sh
midi-time-machine/Builds/VisualStudio2026/: midi-time-machine.sln  midi-time-machine_SharedCode.vcxproj  midi-time-machine_SharedCode.vcxproj.filters  midi-time-machine_StandalonePlugin.vcxproj  midi-time-machine_StandalonePlugin.vcxproj.filters  midi-time-machine_VST3.vcxproj  midi-time-machine_VST3.vcxproj.filters  midi-time-machine_VST3ManifestHelper.vcxproj  resources.rc
midi-time-machine/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
midi-time-machine/Resources/icons/: readme.md
midi-time-machine/Source/: Content.h  Editor.cpp  Editor.h  Main.cpp  MessageTracker.h  MidiOnlyStandaloneWindow.h  MidiQueue.h  NullAudioDevice.h  Playback.cpp  Playback.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Processor.cpp  Processor.h  Settings.h  State.h  Store.cpp  Store.h  Toolbar.h  ValueTreeLogger.h
midi-time-machine/Source/ui/: Content.h  Editor.cpp  Editor.h  Keyboard.h  MidiRoll.h  Resources.cpp  Resources.h  RoundedComponent.h  Settings.h  Toolbar.h  VelocityLines.h
